<resources>
    <string name="app_name">ILIBELLUS</string>
    <string name="app_package">com.ilibellus</string>
    <string name="md_back_label">Voltar</string>
    <string name="md_cancel_label">Cancelar</string>
    <string name="md_choose_label">Escolher</string>
    <string name="md_custom_label">Personalizado</string>
    <string name="md_done_label">Concluído</string>
    <string name="md_error_label">Erro</string>
    <string name="md_presets_label">Predefinido</string>
    <string name="md_storage_perm_error">Seu aplicativo não recebeu a permissão READ_EXTERNAL_STORAGE. </string>
    <string name="menu_calendar">Calendário</string>
    <string name="menu_plans">Planos</string>
    <string name="menu_progress">Progresso</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entre ou cadastre-se</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="welcome">Bem vindo!</string>
    <string name="invalid_username">Nome de usuário inválido</string>
    <string name="invalid_password">A senha deve ter mais de 5 caracteres</string>
    <string name="login_failed">Login falhou</string>
    <string name="logo">Logo</string>
    <string name="version_postfix"></string>
    <string name="copyleft">Copyleft WOOPS 2021</string>
    <string name="dev_github">https://github.com/WeliveltonOP</string>
    <string name="help_online_url">https://github.com/WeliveltonOP/Ilibellus</string>
    <string name="title_item_list">Notas</string>
    <string name="add_note">Adicionar nota</string>
    <string name="title">Título</string>
    <string name="title_activity_list">Ilibellus</string>
    <string name="search">Pesquisar</string>
    <string name="search_hint">Pesquisar nas notas</string>
    <string name="content">Conteúdo</string>
    <string name="save">Salvar</string>
    <string name="share">Compartilhar</string>
    <string name="undo">Desfazer</string>
    <string name="trash">Excluir</string>
    <string name="trash_action">Excluir</string>
    <string name="trashed">Excluída</string>
    <string name="note_trashed">Nota(s) excluídas</string>
    <string name="note_untrashed">Nota(s) restauradas da lixeira</string>
    <string name="untrash">Restaurar da lixeira</string>
    <string name="delete">Excluir</string>
    <string name="note_deleted">Nota(s) excluídas permanentemente</string>
    <string name="archive">Arquivar</string>
    <string name="unarchive">Restaurar dos arquivos</string>
    <string name="creation">Criado em:</string>
    <string name="last_update">Atualizado:</string>
    <string name="delete_note_confirmation">Confirmar a remoção da nota?</string>
    <string name="confirm">Confirmar</string>
    <string name="ok">Ok</string>
    <string name="no">Não</string>
    <string name="failed">falhou</string>
    <string name="cancel">Cancelar</string>
    <string name="note_updated">Nota atualizada</string>
    <string name="empty_note_not_saved">Nota vazia não salva</string>
    <string name="empty_note_not_shared">Nota vazia não pode ser compartilhada</string>
    <string name="note_archived">Nota arquivada</string>
    <string name="note_unarchived">Nota restaurada dos arquivos</string>
    <string name="note">Nota</string>
    <string name="share_message_chooser">Compartilhar com</string>
    <string name="shared_content_sign">\n 【por Ilibellus】</string>
    <string name="sort">Ordenar</string>
    <string name="select_sorting_column">Ordenar por</string>
    <string name="tap_to_undo">Toque para desfazer</string>
    <string name="alarm_set_on">Alarme definido</string>
    <string name="starting_from">a começar em</string>
    <string name="at_time">em</string>
    <string name="discard_changes">Descartar mudanças</string>
    <string name="attachment">Anexo</string>
    <string name="camera">Câmera</string>
    <string name="delete_selected_image">Excluir anexo selecionado?</string>
    <string name="delete_all_attachments">Excluir todos os anexos?</string>
    <string name="gallery">Galeria</string>
    <string name="location">Localização</string>
    <string name="timestamp">Data e Hora</string>
    <string name="pushbullet">Pushbullet</string>
    <string name="remove_location">Remover localização?</string>
    <string name="remove_reminder">Remover lembrete?</string>
    <string name="add_reminder">Adicionar lembrete</string>
    <string name="location_not_found">Localização não encontrada</string>
    <string name="record">Gravar</string>
    <string name="stop">Parar</string>
    <string name="no_app_to_handle_intent">Sem aplicativos que possam abrir este arquivo</string>
    <string name="storage_not_available">Armazenamento não disponível</string>
    <string name="video">Vídeo</string>
    <string name="feature_not_available_on_this_device">Recurso não disponível neste dispositivo</string>
    <string name="error_occurred_deleting_note">Ocorreu um erro ao excluir a nota</string>
    <string name="no_backups_available">Backups não disponíveis</string>
    <string name="data_export_message">Insira o nome do backup</string>
    <string name="data_import_message">Toque -&gt; restaurar\nToque longo -&gt; excluir</string>
    <string name="data_import_message_warning">AVISO: isto irá substituir todos os dados atuais!</string>
    <string name="data_export_completed">Backup de dados concluído</string>
    <string name="data_export_failed">O backup de dados falhou: verifique o logcat para detalhes</string>
    <string name="data_import_completed">Importação de dados concluída</string>
    <string name="click_to_refresh_application">Toque para atualizar o aplicativo</string>
    <string name="backup_existing">Backup já existe, será sobrescrevido</string>
    <string name="tag">Marca</string>
    <string name="tags">Marcas</string>
    <string name="add_tag">Adicionar marcas</string>
    <string name="select_tags">Selecionar marca(s)</string>
    <string name="categories">Categorias</string>
    <string name="edit_tag">Editar categoria</string>
    <string name="add_category">Adicionar categoria</string>
    <string name="category_title">Título</string>
    <string name="category_description">Descrição</string>
    <string name="category_color">Cor</string>
    <string name="category_saved">Categoria salva</string>
    <string name="category_deleted">Categoria excluida</string>
    <string name="category_missing_title">Título da categoria faltando</string>
    <string name="delete_this_category">Excluir esta categoria</string>
    <string name="category">Categoria</string>
    <string name="categorize_as">Adicionar a uma categoria</string>
    <string name="title_activity_category">Editar categorias</string>
    <string name="delete_unused_category_confirmation">Excluir categoria?</string>
    <string name="delete_category_confirmation">Esta categoria é usada em algumas notas.\nConfirma a remoção da mesma nessas notas e a eliminação da categoria?</string>
    <string name="discard">Descartar</string>
    <string name="remove_category">Remover categoria</string>
    <string name="no_tags_created">Não existem etiquetas ainda\nPode criá-las usando hashtags nas suas notas</string>
    <string name="no_categories_created">Nenhuma categoria foi criada ainda</string>
    <string name="notes_category_removed">Categoria removida das notas</string>
    <string name="notes_categorized_as">Notas categorizadas como</string>
    <string name="insert_security_password">Insira a senha de segurança</string>
    <string name="lock">Bloquear</string>
    <string name="save_note_to_lock_it">Salve a nota para bloqueá-la</string>
    <string name="save_note_to_unlock_it">Salve a nota para desbloqueá-la</string>
    <string name="unlock">Desbloquear</string>
    <string name="title_activity_password">Editar senha de segurança</string>
    <string name="title_activity_about">Informação</string>
    <string name="deleted">Excluído</string>
    <string name="no_items_in_list">Nada aqui!</string>
    <string name="checklist_on">Ativar lista</string>
    <string name="checklist_off">Desativar lista</string>
    <string name="checklist_item_hint">Novo item</string>
    <string name="remove_checklist">Remover lista?</string>
    <string name="checklist_keep_checked">Mantenha os itens da lista</string>
    <string name="checklist_keep_symbols">Mantenha os checkmarks (para lembrar os itens marcados)</string>
    <string name="sketch">Esboço</string>
    <string name="crash_dialog_text">Ocorreu algo errado no Ilibellus\n Você gostaria de enviar um relatório para o desenvolvedor?</string>
    <string name="crash_dialog_comment_prompt">Insira um comentário opcional aqui:</string>
    <string name="crash_toast">Algo deu errado no Ilibellus\nUm relatório foi enviado para o desenvolvedor!</string>
    <string name="new_update_available">Uma nova versão do Ilibellus está disponível, gostaria de atualizar?</string>
    <string name="update">Atualizar e avaliar!</string>
    <string name="not_now">Agora não</string>
    <string name="title_activity_sketch">Esboço</string>
    <string name="redo">Refazer</string>
    <string name="colors">Cores</string>
    <string name="stroke">Traço</string>
    <string name="erase_sketch">Apagar esboço?</string>
    <string name="no_reminder_set">Nenhum lembrete definido</string>
    <string name="saturation">Saturação</string>
    <string name="opacity">Opacidade</string>
    <string name="dismiss">Dispensar</string>
    <string name="snooze">Soneca</string>
    <string name="error_importing_some_attachments">Erro ao importar alguns anexos</string>
    <string name="error_saving_attachments">Erro ao salvar anexos</string>
    <string name="proceed">Próximo</string>
    <string name="contracted_view">Vista Compacta</string>
    <string name="expanded_view">Vista expandida</string>
    <string name="grid_view">Vista em grelha</string>
    <string name="add_shortcut">Adicionar atalho</string>
    <string name="shortcut_added">Atalho adicionado à tela inicial</string>
    <string name="shortcut_note_deleted">Este atalho aponta para uma nota excluída</string>
    <string name="widget_simple_description">Widget simples com botões</string>
    <string name="widget_list_description">Widget com botões e rolagem de lista</string>
    <string name="notes">notas</string>
    <string name="show_thumbnails">Mostrar miniaturas dos anexos</string>
    <string name="show_timestamps">Mostrar datas</string>
    <string name="choose_action">Escolha a ação</string>
    <string name="edit">Editar</string>
    <string name="reminders">lembretes</string>
    <string name="not_expired">não expirado</string>
    <string name="expired">expirados</string>
    <string name="today">hoje</string>
    <string name="tomorrow">amanhã</string>
    <string name="open">Abrir</string>
    <string name="copy">Copiar</string>
    <string name="no_application_can_perform_this_action">Nenhum aplicativo pode executar esta ação</string>
    <string name="eraser">Apagador</string>
    <string name="image">Imagem</string>
    <string name="error">Erro</string>
    <string name="settings_password_instructions">Senha assegura que as notas não serão vistas ou modificadas por outras pessoas.\n\nAo configurar uma nova senha, a antiga será requisitada.</string>
    <string name="insert_new_password">Insira uma nova senha</string>
    <string name="confirm_new_password">Confirme a nova senha</string>
    <string name="settings_password_question_instructions">Insira uma pergunta e uma resposta secreta para redefinir a senha caso você esqueça-a</string>
    <string name="settings_password_question">Pergunta</string>
    <string name="settings_password_answer">Resposta</string>
    <string name="settings_password_answer_check">Confirmar Resposta</string>
    <string name="stroke_size">tamanho do traço</string>
</resources>