<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:pixlui="http://schemas.android.com/apk/com.neopixl.pixlui"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:id="@+id/password_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_horizontal_margin"
        android:scrollbarSize="4dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbarThumbVertical="@drawable/scroll_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_password_instructions"
                android:textColor="@color/text_gray"
                android:textSize="15sp"
                pixlui:typeface="Roboto-Regular.ttf" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:hint="@string/insert_new_password"
                android:inputType="textPassword"
                style="@style/Text.Normal" />

            <EditText
                android:id="@+id/password_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"
                style="@style/Text.Normal" />

            <com.neopixl.pixlui.components.textview.TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/settings_password_question_instructions"
                android:textColor="@color/text_gray"
                android:textSize="15sp"
                pixlui:typeface="Roboto-Regular.ttf" />

            <EditText
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:hint="@string/settings_password_question"
                style="@style/Text.Normal" />

            <EditText
                android:id="@+id/answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:hint="@string/settings_password_answer"
                android:inputType="textPassword"
                style="@style/Text.Normal" />

            <EditText
                android:id="@+id/answer_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:hint="@string/settings_password_answer_check"
                android:inputType="textPassword"
                style="@style/Text.Normal" />

            <include layout="@layout/password_buttons" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
